# bind9

./: .clang-format  .gitlab-ci.yml  CHANGES  COPYRIGHT  Makefile.am  Makefile.top  PLATFORMS.md  README  README.md  config.h.in  configure  configure.ac
cocci/: ISC_MAGIC_VALID-ordering.spatch  bool-expressions.spatch  isc_atomic_magic.spatch  isc_refcount.spatch  isc_rwlock_refactor.spatch  remove_result_register_calls.spatch  update_result_api.spatch
contrib/dlz/modules/filesystem/: dir.h
doc/arm/: Bv9ARM-book.xml  Bv9ARM.ch05.html  Bv9ARM.ch08.html  Makefile.am  configuration.rst  dnssec-policy.grammar.xml  libdns.xml  notes-9.17.2.xml  notes.html  notes.txt  reference.rst
doc/design/: decompression  dnssec-policy  zone
doc/dev/: dev.md
doc/misc/: Makefile.am  options
doc/notes/: notes-current.rst
lib/: unit-test-driver.sh.in
lib/bind9/: check.c
lib/bind9/win32/: libbind9.vcxproj.in
lib/dns/: Makefile.am  Makefile.in  Tbl.h  acl.c  adb.c  badcache.c  byaddr.c  cache.c  callbacks.c  catz.c  client.c  compress.c  db.c  dbtable.c  diff.c  dispatch.c  dlz.c  dns64.c  dnsrps.c  dnssec.c  dnstap.c  dst_api.c  dst_internal.h  dst_parse.c  dyndb.c  ecdb.c  forward.c  gen.c  geoip2.c  gssapi_link.c  gssapictx.c  hmac_link.c  iptable.c  journal.c  kasp.c  keymgr.c  keytable.c  lib.c  lookup.c  lowac.c  (+46 more)
lib/dns/include/dns/: acl.h  adb.h  cache.h  callbacks.h  compress.h  db.h  dbiterator.h  diff.h  dlz.h  dns64.h  dnssec.h  dyndb.h  geoip.h  iptable.h  kasp.h  keymgr.h  message.h  name.h  nta.h  peer.h  rbt.h  rdata.h  rdataset.h  rdatasetiter.h  result.h  rpz.h  rriterator.h  ssu.h  tcpmsg.h  tsig.h  types.h  validator.h  view.h  zone.h
lib/dns/include/dst/: Makefile.in  dst.h
lib/dns/rdata/any_255/: tsig_250.c
lib/dns/rdata/ch_3/: a_1.c
lib/dns/rdata/generic/: afsdb_18.c  amtrelay_260.c  avc_258.c  caa_257.c  cdnskey_60.c  cds_59.c  cert_37.c  cname_5.c  csync_62.c  dlv_32769.c  dname_39.c  dnskey_48.c  doa_259.c  ds_43.c  eui48_108.c  eui64_109.c  gpos_27.c  hinfo_13.c  hip_55.c  ipseckey_45.c  isdn_20.c  key_25.c  keydata_65533.c  l32_105.c  l64_106.c  loc_29.c  lp_107.c  mb_7.c  md_3.c  mf_4.c  mg_8.c  minfo_14.c  mr_9.c  mx_15.c  naptr_35.c  nid_104.c  ninfo_56.c  ns_2.c  nsec3_50.c  nsec3param_51.c  (+26 more)
lib/dns/rdata/hs_4/: a_1.c
lib/dns/rdata/in_1/: a6_38.c  a_1.c  aaaa_28.c  apl_42.c  atma_34.c  dhcid_49.c  eid_31.c  httpssvc_65479.c  httpssvc_65479.h  httpssvc_65482.c  httpssvc_65482.h  kx_36.c  nimloc_32.c  nsap-ptr_23.c  nsap_22.c  px_26.c  srv_33.c  svcb_65481.c  svcb_65481.h  wks_11.c
lib/dns/tests/: Makefile.am  Makefile.in  dh_test.c  dns64_test.c  dnstest.c  dst_test.c  rdata_test.c  result_test.c
lib/dns/win32/: gen.vcxproj.in  libdns.def.in  libdns.vcxproj.filters.in  libdns.vcxproj.in
lib/irs/: Makefile.am  context.c  dnsconf.c  getaddrinfo.c  resconf.c
lib/irs/tests/: Makefile.am
lib/irs/win32/: libirs.vcxproj.in
lib/isc/: Makefile.am  Makefile.in  aes.c  app.c  assertions.c  astack.c  backtrace.c  base32.c  base64.c  bind9.c  buffer.c  bufferlist.c  commandline.c  condition.c  counter.c  crc64.c  entropy.c  error.c  event.c  faaa_queue.c  glob.c  hash.c  heap.c  hex.c  hmac.c  hp.c  ht.c  httpd.c  iterated_hash.c  lex.c  lfsr.c  lib.c  log.c  md.c  mem.c  mutex.c  mutexblock.c  netaddr.c  netscope.c  openssl_shim.c  (+29 more)
lib/isc/include/isc/: Makefile.in  astack.h  bind9.h  buffer.h  condition.h  errno.h  event.h  faaa_queue.h  hash.h  hp.h  lex.h  magic.h  mem.h  mutex.h  mutexatomic.h  netaddr.h  netmgr.h  netscope.h  once.h  platform.h.in  queue.h  radix.h  result.h  result_dns.h  result_dst.h  result_isccc.h  resultclass.h  rwlock.h  socket.h  string.h  task.h  thread.h  timer.h  types.h  util.h
lib/isc/include/pk11/: result.h
lib/isc/netmgr/: netmgr-int.h  netmgr.c  tcp.c  tcpdns.c  tls.c  udp.c  uv-compat.c  uv-compat.h  uverr2result.c
lib/isc/pthreads/: condition.c  mutex.c  thread.c
lib/isc/pthreads/include/isc/: mutex.h  thread.h
lib/isc/tests/: Makefile.am  aes_test.c  buffer_test.c  counter_test.c  crc64_test.c  errno_test.c  file_test.c  hash_test.c  heap_test.c  hmac_test.c  ht_test.c  isctest.c  isctest.h  lex_test.c  md_test.c  mem_test.c  netaddr_test.c  parse_test.c  pool_test.c  radix_test.c  random_test.c  regex_test.c  result_test.c  safe_test.c  siphash_test.c  sockaddr_test.c  socket_test.c  symtab_test.c  task_test.c  taskpool_test.c  time_test.c  timer_test.c
lib/isc/unix/: dir.c  errno.c  errno2result.c  errno2result.h  file.c  fsaccess.c  ifiter_getifaddrs.c  interfaceiter.c  meminfo.c  net.c  pk11_api.c  resource.c  socket.c  stdio.c  stdtime.c  syslog.c  time.c
lib/isc/unix/include/isc/: dir.h  stdatomic.h
lib/isc/win32/: dir.c  interfaceiter.c  libisc.def.in  libisc.vcxproj.filters.in  libisc.vcxproj.in  socket.c
lib/isc/win32/include/isc/: dir.h  ltdl.h  platform.h.in  stdatomic.h  thread.h
lib/isccc/: Makefile.am  Makefile.in  alist.c  base64.c  cc.c  ccmsg.c  result_isccc.c  symtab.c
lib/isccc/include/isccc/: Makefile.in  ccmsg.h
lib/isccc/tests/: Makefile.am  result_test.c
lib/isccc/win32/: libisccc.def  libisccc.vcxproj.filters.in  libisccc.vcxproj.in
lib/isccfg/: Makefile.am  kaspconf.c  namedconf.c  parser.c
lib/isccfg/include/isccfg/: cfg.h  grammar.h
lib/isccfg/tests/: Makefile.am  duration_test.c
lib/isccfg/win32/: libisccfg.def  libisccfg.vcxproj.in
lib/ns/: Makefile.am  client.c  interfacemgr.c  log.c  notify.c  query.c  server.c  stats.c  update.c  xfrout.c
lib/ns/include/ns/: client.h  interfacemgr.h  log.h  query.h  server.h
lib/ns/tests/: Makefile.am  Makefile.in  notify_test.c  nstest.c  query_test.c
lib/ns/win32/: libns.def  libns.vcxproj.in
lib/samples/: nsprobe.c  resolve.c  sample-async.c  sample-request.c  sample-update.c
lib/samples/win32/: async.vcxproj.in  gai.vcxproj.in  nsprobe.vcxproj.in  request.vcxproj.in  resolve.vcxproj.in  update.vcxproj.in
lib/win32/bindevt/: bindevt.vcxproj.in
m4/: ax_path_file.m4
unit/: unittest.sh.in
util/: check-categories.sh  copyrights  git-replay-merge.sh
win32utils/: Configure
